changed the h1, h2, and ps!

--- a/01-intro/index.html
+++ b/01-intro/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<section id='content'>
-	   <h1>[My Name]</h1>
-	   <h2>[My year and Major]</h2>
-	   <p>[My Goals for the semester]</p>
+	   <h1>Lianne Castellanos</h1>
+	   <h2>Continuing ED - Marketing Associate at the Cambridge Eating Disorder Center</h2>
+	   <p>I want to be able to code a website from start to finish.</p>
 	</section>
 	
 </body>
