--- a/01-intro/index.html
+++ b/01-intro/index.html
@@ -8,7 +8,7 @@
 <body>
 	<section id='content'>
 	   <h1>Lianne Castellanos</h1>
-	   <h2>Continuing ED - Marketing Associate at the Cambridge Eating Disorder Center</h2>
+	   <h2>Continuing ED - Marketing Associate at the CEDC</h2>
 	   <p>I want to be able to code a website from start to finish.</p>
 	</section>
 	
