--- a/homework/index.html
+++ b/homework/index.html
@@ -9,7 +9,7 @@
 	<section id='content'>
 		<h1>Lianne's Homework<h1>
 		<h2>#1-Intro Example</h2>
-				<p><a href="http://http://liannejean.github.com/01-intro/index.html">Homework #1</a></p>
+				<p><a href="http://liannejean.github.com/01-intro/index.html">Homework #1</a></p>
 		<h2>#2-HTML5 Semantic Chop</h2>
 				<p>Add your link(s) Here</p>
 		<h2>#3-Wireframing </h2>
