--- a/homework/index.html
+++ b/homework/index.html
@@ -11,7 +11,7 @@
 		<h2>#1-Intro Example</h2>
 				<p><a href="http://liannejean.github.com/01-intro/index.html">Homework 1</a></p>
 		<h2>#2-HTML5 Semantic Chop</h2>
-				<p>Add your link(s) Here</p>
+				<p><a href="http://liannejean.github.com/02-html-chop/index.html">Home Work 2</a></p>
 		<h2>#3-Wireframing </h2>
 				<p>Add your link(s) Here</p>
 		<h2>#4-CSS Positioning Llama</h2>
