--- a/04-css-llama/index.html
+++ b/04-css-llama/index.html
@@ -11,8 +11,8 @@
 <body>
 
 <section id='main-content'>
-  <article style='left'>
-    <img src='images/llama1.png'/>
+  <article id='box-left'>
+    <img class='left' src='images/llama1.png'/>
     <h1>Lorem Aliquam erat volutpat</h1>
     <h2>By Frank Doe</h2>
     <p>Suspendisse mattis metus et justo. Aliquam erat volutpat. Suspendisse
@@ -29,8 +29,8 @@
       aliquet.</p>
   </article>
 
-  <article style='right'>
-    <img src='images/llama2.png'/>
+  <article id='box-right'>
+    <img  class='left' src='images/llama2.png'/>
     <h1>Lorem Ipsum</h1>
     <h2>By Frank Doe</h2>
     <p>Suspendisse mattis metus et justo. Aliquam erat volutpat. Suspendisse
