--- a/04-css-llama/index.html
+++ b/04-css-llama/index.html
@@ -12,7 +12,7 @@
 
 <section id='main-content'>
   <article id='box-left'>
-    <img  src='images/llama1.png' class='left' />
+    <img  src='images/llama1.png' class="left" />
     <h1>Lorem Aliquam erat volutpat</h1>
     <h2>By Frank Doe</h2>
     <p>Suspendisse mattis metus et justo. Aliquam erat volutpat. Suspendisse
@@ -30,7 +30,7 @@
   </article>
 
   <article id='box-right'>
-    <img   src='images/llama2.png' class='left' />
+    <img   src='images/llama2.png' class="left" />
     <h1>Lorem Ipsum</h1>
     <h2>By Frank Doe</h2>
     <p>Suspendisse mattis metus et justo. Aliquam erat volutpat. Suspendisse
