--- a/02-html-chop/index.html
+++ b/02-html-chop/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="reset.css" type="text/css"> 
   </head>
   <body>
-<header><img src="images/dogvscat-logo.gif" alt="Dogs vs Cats" /></header>
+<header><h1>Cats vs. Dogs</h1></header>
 <nav>
 	<ul>
 		<li>Photos</li>
