--- a/homework/index.html
+++ b/homework/index.html
@@ -11,13 +11,16 @@
 		<h2>#1-Intro Example</h2>
 				<p><a href="http://liannejean.github.com/01-intro/index.html">Homework 1</a></p>
 		<h2>#2-HTML5 Semantic Chop</h2>
-				<p><a href="http://liannejean.github.com/02-html-chop/index.html">Home Work 2</a></p>
+				<p><a href="http://liannejean.github.com/02-html-chop/index.html">Homework 2</a></p>
 		<h2>#3-Wireframing </h2>
-				<p>Add your link(s) Here</p>
+				<p><a href="http://liannejean.github.com/03-wireframes/user-stories.txt">User Stories</a><br />
+				<a href="http://liannejean.github.com/03-wireframes/wireframe1.jpg">Wireframe 1</a><br />
+				<a href="http://liannejean.github.com/03-wireframes/wireframe2.jpg">Wireframe 2</a><br />
+				<a href="http://liannejean.github.com/03-wireframes/wireframe3.jpg">Wireframe 3</a></p>
 		<h2>#4-CSS Positioning Llama</h2>
-				<p>Add your link(s) Here</p>
+				<p><a href="http://liannejean.github.com/04-css-llama/index.html">Homework 4-Llamas</a></p>
 		<h2>#5-CSS Positioning Cats vs Dogs</h2>
-				<p>Add your link(s) Here</p>
+				<p><a href="http://liannejean.github.com/04-css-llama/index.html">Homework 4-Dogs vs Cats</a></p>
 		<h2>#6-CSS Layout Cats vs Dogs</h2>
 		    	<p>Add your link(s) Here</p>
 		<h2>#7-CSS Positioning & Layout Robots</h2>
