--- a/05-css-cats-vs-dogs/index.html
+++ b/05-css-cats-vs-dogs/index.html
@@ -7,12 +7,12 @@
   <body>
 <header id='site-header'><h1><a href='#'>Dogs Vs Cats</a></h1></header>
 <nav id="main-menu">
-	<ul id="main-menu">
-		<li id="main-menu">Photos</li>
-		<li id="main-menu">About</li>
-		<li id="main-menu">Submit</li>
-		<li id="main-menu">Blog</li>
-		<li id="main-menu">Contact</li>
+	<ul>
+		<li>Photos</li>
+		<li>About</li>
+		<li>Submit</li>
+		<li>Blog</li>
+		<li>Contact</li>
 	</ul>
 </nav>
 
@@ -30,6 +30,6 @@
 </section>
 <footer>
 	<p>images and copy from wiki commons</p>
-	<p>copyright åÂå©2011 martha rettig</p>
+	<p>copyright  martha rettig</p>
 </footer>
   </body>
