--- a/05-css-cats-vs-dogs/index.html
+++ b/05-css-cats-vs-dogs/index.html
@@ -17,12 +17,12 @@
 </nav>
 
 <section>
-	<article id="main-article">
+	<article class="main-article">
 		<img src="images/vader-dog.jpg" alt="darth vader puppy" />
 		<h1>Dogs Have Better Noses</h1>
 		<p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.</p>
 	</article>
-	<article id="main-article">
+	<article class="main-article">
 		<img src="images/yoda-cat.jpg" alt="yoda kitty" />
 		<h1>Cats Have Better Tongues</h1>
 		<p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.</p>
