--- a/05-css-cats-vs-dogs/index.html
+++ b/05-css-cats-vs-dogs/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
 	<title>Dogs vs Cats</title>
-		<link rel="stylesheet" href="reset.css" type="text/css"> 
+	<link rel="stylesheet" href="reset.css" type="text/css" media="screen" charset="utf-8">
   </head>
   <body>
 <header id='site-header'><h1><a href='#'>Dogs Vs Cats</a></h1></header>
