lets hope this works

--- a/05-css-cats-vs-dogs/index.html
+++ b/05-css-cats-vs-dogs/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="reset.css" type="text/css">
   </head>
   <body>
-<header id='site-header'><h1><a href='#'>Dogs Vs Cats</a></h1></header>
+<header id="site-header"><h1><a href="#">Dogs Vs Cats</a></h1></header>
 <nav id="main-menu">
 	<ul>
 		<li>Photos</li>
