--- a/05-css-cats-vs-dogs/index.html
+++ b/05-css-cats-vs-dogs/index.html
@@ -7,13 +7,13 @@
   </head>
   <body>
 <header id="site-header"><h1><a href="#">Dogs Vs Cats</a></h1></header>
-<nav id="main-menu">
+<nav id="menu">
 	<ul>
-		<li>Photos</li>
-		<li>About</li>
-		<li>Submit</li>
-		<li>Blog</li>
-		<li>Contact</li>
+		<li><a href="#">Photos</a></li>
+		<li><a href="#">About</a></li>
+		<li><a href="#">Submit</a></li>
+		<li><a href="#">Blog</a></li>
+		<li><a href="#">Contact</a></li>
 	</ul>
 </nav>
 
@@ -34,3 +34,4 @@
 	<p>copyright  martha rettig</p>
 </footer>
   </body>
+</html>
