--- a/05-css-cats-vs-dogs/index.html
+++ b/05-css-cats-vs-dogs/index.html
@@ -30,8 +30,8 @@
 	</article>
 </section>
 <footer id="site-footer">
-	<p>images and copy from wiki commons</p>
-	<p>copyright  martha rettig</p>
+	<p class="content-left">images and copy from wiki commons</p>
+	<p class="content-right">copyright  martha rettig</p>
 </footer>
   </body>
 </html>
