css & image changes

--- a/05-css-cats-vs-dogs/index.html
+++ b/05-css-cats-vs-dogs/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="reset.css" type="text/css">
   </head>
   <body>
+	<div id="main-container">
 <header id="site-header"><h1><a href="#">Dogs Vs Cats</a></h1></header>
 <nav id="menu">
 	<ul>
@@ -33,5 +34,6 @@
 	<p class="content-left">images and copy from wiki commons</p>
 	<p class="content-right">copyright  martha rettig</p>
 </footer>
+	<div>
   </body>
 </html>
