--- a/05-css-cats-vs-dogs/index.html
+++ b/05-css-cats-vs-dogs/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
-<head>
+  <head>
 	<meta charset="UTF-8">
 	<title>Dogs vs Cats</title>
 	<link rel="stylesheet" href="reset.css" type="text/css">
@@ -34,6 +34,6 @@
 	<p class="content-left">images and copy from wiki commons</p>
 	<p class="content-right">copyright  martha rettig</p>
 </footer>
-	<div>
+	</div>
   </body>
 </html>
