--- a/07-css-robots/index.html
+++ b/07-css-robots/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Robots</title>
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -21,18 +21,12 @@
 <div id='menu-wrapper'>
 <nav id='main-menu'>
   <ul>
-    <li>
-    	<a href="#">Home</a></li>
-    <li>
-    	<a href="#">Shop</a></li>
-    <li>
-    	<a href="#">About Us</a></li>
-    <li>
-    	<a href="#">New Products</a></li>
-    <li>
-    	<a href="#">Contact Us</a></li>
-    <li>
-    	<a href="#">Faqs</a></li>
+    <li> <a href="#">Home</a></li>
+    <li> <a href="#">Shop</a></li>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">New Products</a></li>
+    <li><a href="#">Contact Us</a></li>
+    <li><a href="#">Faqs</a></li>
   </ul>
 </nav>
 </div> <!-- end #menu-wrapper -->
@@ -44,7 +38,6 @@
         <h2>Lorem Ipsum Dolor Sit Amet</h2>
         <p>Dictumst. Nullam malesuada molestie lorem. Nunc non mauris. Nam accumsan
           tortor gravida elit. Cras porttitor.</p>
-
         <p>Praesent vel enim sed eros luctus imperdiet. Mauris neque ante, placerat at,
           mollis vitae, faucibus quis, leo. Ut feugiat. Vivamus urna quam, congue
           vulputate, convallis non, cursus cursus, risus. Quisque aliquet. Donec
@@ -55,12 +48,9 @@
           dictumst. Vestibulum blandit dignissim dui. Maecenas vitae magna non felis
           ornare.</p>
 
-
-
         <h2>Lorem Ipsum Dolor Sit Amet</h2>
         <p>Dictumst. Nullam malesuada molestie lorem. Nunc non mauris. Nam accumsan
           tortor gravida elit. Cras porttitor.</p>
-
         <p>Praesent vel enim sed eros luctus imperdiet. Mauris neque ante, placerat at,
           mollis vitae, faucibus quis, leo. Ut feugiat. Vivamus urna quam, congue
           vulputate, convallis non, cursus cursus, risus. Quisque aliquet. Donec
@@ -75,22 +65,14 @@
     <aside id='sidebar'>
       <h1>Dolor sit Amet</h1>
       <ul>
-        <li>
-        	<a href="#">Lorem Ipsum</a></li>
-        <li>
-        	<a href="#">Lorem Ipsum</a></li>
-        <li>
-        	<a href="#">Lorem Ipsum</a></li>
-        <li>
-        	<a href="#">Lorem Ipsum</a></li>
-        <li>
-        	<a href="#">Lorem Ipsum</a></li>
-        <li>
-        	<a href="#">Lorem Ipsum</a></li>
-        <li>
-        	<a href="#">Lorem Ipsum</a></li>
-        <li>
-        	<a href="#">Lorem Ipsum</a></li>
+        <li><a href="#">Lorem Ipsum</a></li>
+        <li><a href="#">Lorem Ipsum</a></li>
+        <li><a href="#">Lorem Ipsum</a></li>
+        <li><a href="#">Lorem Ipsum</a></li>
+        <li><a href="#">Lorem Ipsum</a></li>
+        <li><a href="#">Lorem Ipsum</a></li>
+        <li><a href="#">Lorem Ipsum</a></li>
+        <li><a href="#">Lorem Ipsum</a></li>
       </ul>
       <a href='#'><img src='images/robot-pets.png'/></a>
       <a href='#'><img src='images/vintage-bots.png'/></a>
