--- a/homework/index.html
+++ b/homework/index.html
@@ -24,7 +24,7 @@
 		<h2>#6-CSS Layout Cats vs Dogs</h2>
 		     	<p><a href="http://liannejean.github.com/05-css-cats-vs-dogs/index.html">Homework 6-Dogs vs Cats</a></p>				
 		<h2>#7-CSS Positioning & Layout Robots</h2>
-				<p>Add your link(s) Here</p>
+				<p><a href="http://liannejean.github.com/07-css-robots/index.html">Homework 7-Robots</a></p>
 		<h2>#8-Final Project Designs</h2>
 				<p>Add your link(s) Here</p>
 		<h2>#9-Responsive Homework -Cats vs Dogs</h2>
