--- a/11-final/index.html
+++ b/11-final/index.html
@@ -1,9 +1,40 @@
-<!DOCTYPE html>
-<html>
-  <head>
-
-  </head>
-  <body>
-
-  </body>
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Lianne Jean Castellanos</title>
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <!-- FavIcon -->
+  <link rel="shortcut icon" href="/favicon.ico" />
+</head>
+<body>
+	<div id='site-wrapper'>
+	<header id="site-header">
+		<h1>Lianne Jean Castellanos</h1>
+		<nav>
+			<ul>
+				<li>About Me</li>
+				<li>My Work</li>
+				<li>Contact</li>
+			</ul>
+		</nav>	
+	</header>
+	<article>
+		<p>Bacon ipsum dolor sit amet salami ham ground round, sirloin ribeye pastrami corned beef shoulder venison meatloaf bacon chicken fatback andouille. Pork hamburger biltong turducken spare ribs. Filet mignon meatloaf chicken pork beef, swine spare ribs drumstick shankle short ribs meatball sausage sirloin. Spare ribs swine tail shoulder. Bresaola turducken hamburger pig, prosciutto jowl meatball.</p>
+		<p>Turkey short ribs prosciutto speck pork ball tip, frankfurter venison. Pancetta jowl turkey leberkas. Filet mignon flank corned beef short loin, pork loin pork chop pork belly salami ball tip t-bone turducken meatball chicken hamburger kielbasa. Tongue bresaola strip steak, meatball cow venison speck ribeye biltong swine jowl spare ribs. Pork belly pastrami tenderloin biltong, short ribs filet mignon tongue meatball meatloaf andouille prosciutto ball tip shoulder pork chop</p>
+		<p>Bacon ipsum dolor sit amet salami ham ground round, sirloin ribeye pastrami corned beef shoulder venison meatloaf bacon chicken fatback andouille. Pork hamburger biltong turducken spare ribs. Filet mignon meatloaf chicken pork beef, swine spare ribs drumstick shankle short ribs meatball sausage sirloin. Spare ribs swine tail shoulder. Bresaola turducken hamburger pig, prosciutto jowl meatball.</p>
+		<p>Turkey short ribs prosciutto speck pork ball tip, frankfurter venison. Pancetta jowl turkey leberkas. Filet mignon flank corned beef short loin, pork loin pork chop pork belly salami ball tip t-bone turducken meatball chicken hamburger kielbasa. Tongue bresaola strip steak, meatball cow venison speck ribeye biltong swine jowl spare ribs. Pork belly pastrami tenderloin biltong, short ribs filet mignon tongue meatball meatloaf andouille prosciutto ball tip shoulder pork chop</p>
+	</article>
+	<aside>
+		<h2>About<h2>
+	</aside>
+	<footer>
+	</footer>	
+	</div> <!-- end #site-wrapper -->	
+</body>
 </html>
