--- a/11-final/index.html
+++ b/11-final/index.html
@@ -11,6 +11,7 @@
   <meta name="description" content="" />
   <!-- FavIcon -->
   <link rel="shortcut icon" href="/favicon.ico" />
+  <link href='http://fonts.googleapis.com/css?family=Sofia' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div id='site-wrapper'>
